<resources>
    <string name="app_name">cpe408FinalProject</string>
    <string name="loginWelcomeBack">Welcome Back</string>
    <string name="loginIntro">Login in to your account</string>
    <string name="loginUsername">Username</string>
    <string name="loginPassword">Password</string>
    <string name="loginForgotPass">Forgot Password?</string>
    <string name="loginButton">LOGIN</string>

    <string name="userLogoutButton">LOGOUT</string>
    <string name="userIntro">Welcome,</string>
    <string name="userDesc">Welcome to our cozy corner, where everything is delightful for you.</string>

    <string name="userListLabel">All Users</string>
    <string name="show">Show</string>
    <string name="entries">entries</string>
    <string name="userListSearch">Search Username</string>
    <string name="userListUserLabel">Username</string>
    <string name="userListPassLabel">Password</string>
    <string name="userListActionLabel">Action</string>
</resources>